add: interpolated clamp improvements